# cctv

./: .gitignore  README  README.md  package.json
.legacy/: removed-downloader.txt
api/: Dockerfile  index.js  package.json
api/controllers/: authController.js  cameraController.js  groupController.js  groupUserController.js  inviteController.js  sessionController.js  userController.js
api/db/: index.js
api/db/models/: Camera.js  Group.js  GroupUser.js  Invite.js  Session.js  TelegramAccount.js  Token.js  User.js  WebAccount.js
api/utils/: cookies.js  db.js  redis.js  tokens.js
bot/: index.js  package-lock.json  package.json
bot/handlers/: handleAdmin.js  handleMessages.js  handleStart.js
bot/utils/: ArrowPanel.js  getUser.js  qrController.js  request.js
slave-recorder/: Cargo.toml  README  README.md  config.example.toml
slave-recorder/src/: main.rs
ssh-uploader/: index.js  package-lock.json  package.json
web/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  main.jsx  styles.jsx
web/src/components/: Avatar.jsx  AvatarEditor.jsx  MicSender.jsx  PTZPanel.jsx  VideoPlayer.jsx
web/src/hooks/: useAuth.js
web/src/pages/: AuthPage.jsx  Cameras.jsx  Dashboard.jsx  Participants.jsx  Recordings.jsx  Settings.jsx
web/src/utils/: timeAgo.js
web/srcprev/src/: App.jsx  index.css
web/srcprev/src/components/: CameraGrid.jsx  QrScanner.jsx
web/srcprev/src/hooks/: useAuth.js
web/srcprev/src/utils/: hlsAttach.js
